Bug 1607134 - Make sRunningIndex an Atomic to avoid racing r=mayhemer

Differential Revision: https://phabricator.services.mozilla.com/D63675